Fix: Some text is cut off in the fancytree. Title is multiline now.

--- a/static/resources/css/explore.css
+++ b/static/resources/css/explore.css
@@ -206,3 +206,16 @@ a[class="collapsed"] .fa-chevron-up {
     color: black;
     font-size: small;
 }
+
+#results_infos {
+    color: black;
+}
+
+ul.fancytree-container{
+    width: 17em;
+}
+
+span.fancytree-title{
+    white-space: normal;
+    width: 12em;
+}
